# geodude_assets

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  trigger_auto_update.yml
examples/: view_collisions.py  view_geodude.py
geodude_assets.egg-info/: PKG-INFO  SOURCES.txt
mj_geodude.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: robot_assembly.py  scene.xml
models/abh_right_small/: scene.xml
models/geodude/: geodude.xml  geodude_correct.xml  geodude_wrong_with_quat_change.xml
models/miscellaneous/: camera_with_mount.xml  table.xml
models/robotiq_2f140/: 2f140.xml
models/universal_robots_ur5e/: ur5e.xml
models/vention/: vention.xml
src/geodude_assets/: __init__.py  assembly.py
src/geodude_assets/models/: scene.xml
src/geodude_assets/models/abh_left_small/: abh_left_small.xml
src/geodude_assets/models/abh_right_small/: abh_right_small.xml
src/geodude_assets/models/geodude/: base-89a0661a7293371ffe78c9605d5b7ccef2a78430.stl  base_mount-492692230394a1ebdce431c652d89a9c9a4211b5.stl  coupler-e866eb8db5bf2b3f0922658edc8dd3dff1e96529.stl  driver-a0c14c2ec91c3e05ccc3e9499456623628d28b1a.stl  follower-90ac7cc434d804e958140d6f37fcc14bdbf74f5b.stl  geodude.xml  pad-0fb7d7243a94c9e197e05a09dc9b6de5c126cdfc.stl  spring_link-3730a0af47afa032388b26d12d24919377c589c7.stl
src/geodude_assets/models/robotiq_2f140/: 2f140.xml
src/geodude_assets/models/universal_robots_ur5e/: README.md  ur5e.xml
src/geodude_assets/models/vention/: vention.xml
src/mj_geodude/: __init__.py  assembly.py
src/mj_geodude.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mj_geodude/models/: README.md
src/mj_geodude/models/abh_left_small/: abh_left_small.xml  scene.xml
src/mj_geodude/models/geodude/: geodude.xml
src/mj_geodude/models/robotiq_2f140/: 2f140.xml
src/mj_geodude/models/vention/: vention.xml
tests/: test_geodude_assets.py  test_mj_geodude.py
