[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geodude_assets"
version = "0.1.0"
description = "MuJoCo models for the Geodude bimanual robot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mujoco",
]

[project.optional-dependencies]
# For running robot_assembly.py to build custom configurations
assembly = [
    "dm_control",
    "numpy",
]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Repository = "https://github.com/personalrobotics/geodude_assets"
Issues = "https://github.com/personalrobotics/geodude_assets/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geodude_assets = [
    "models/**/*.xml",
    "models/**/*.stl",
    "models/**/*.obj",
    "models/**/*.png",
    "models/**/*.mtl",
    "models/**/README.md",
]

[tool.ruff]
lint.select = ["F", "E", "W", "I"]

[dependency-groups]
dev = [
    "pillow>=12.1.0",
]
