[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geodude_assets"
version = "0.1.0"
description = "MuJoCo models for the Geodude bimanual robot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mujoco",
    "numpy-stl>=3.2.0",
]

[project.optional-dependencies]
# For running robot_assembly.py to build custom configurations
# Uses dm_control.mjcf for programmatic model assembly
assembly = [
    "dm_control",
    "lxml",
    "absl-py",
    "scipy",
    "dm_env",
    "numpy",
]

[tool.uv]
# Exclude labmaze - it requires Bazel to build and is not needed for dm_control.mjcf
override-dependencies = ["labmaze ; sys_platform == 'never'"]

[project.urls]
Repository = "https://github.com/personalrobotics/geodude_assets"
Issues = "https://github.com/personalrobotics/geodude_assets/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geodude_assets = [
    "models/**/*.xml",
    "models/**/*.stl",
    "models/**/*.obj",
    "models/**/*.png",
    "models/**/*.mtl",
    "models/**/README.md",
]

[tool.ruff]
lint.select = ["F", "E", "W", "I"]

[dependency-groups]
dev = [
    "pillow>=12.1.0",
    "pytest",
    "ruff",
]
